# simple-language-loader

./: .gitattributes  Cargo.toml  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: e.lang  index.spec.ts  languages.d.ts  package-lock.json
src/: lib.rs
