
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "ssl"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.0.0", default-features = false, features = [
  "napi4",
  "napi6",
] }
napi-derive = "3.0.0"
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.145"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

